fix invalid date error in flight search, keycloak roles mapping